--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-ejercicio></app-ejercicio>
-<app-login></app-login>
+<!-- <app-ejercicio></app-ejercicio>
+<app-login></app-login> -->
+<button routerLink="Login" >login</button>
