--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-ejercicio></app-ejercicio>
 <app-login></app-login> -->
 <button routerLink="Login" >login</button>
+<router-outlet></router-outlet>
