--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,12 +27,14 @@
                               <!-- Error Message -->
                           </div>
                           <div class="col-lg-6 login-btm login-button">
+                            <button routerLink="Login" >login</button>
                               <button type="submit" class="btn btn-outline-primary">LOGIN</button>
                           </div>
                       </div>
                   </form>
               </div>
           </div>
+
           <div class="col-lg-3 col-md-2"></div>
       </div>
   </div>
