--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
                               <!-- Error Message -->
                           </div>
                           <div class="col-lg-6 login-btm login-button">
-                            <button routerLink="Login" >login</button>
+                            <button routerLink="Registro" >login</button>
                               <button type="submit" class="btn btn-outline-primary">LOGIN</button>
                           </div>
                       </div>
