--- a/src/app/registrer/registrer.component.css
+++ b/src/app/registrer/registrer.component.css
@@ -154,29 +154,29 @@ input[type=password]{
   margin-top: 20px;
 }
 
-a.button {
+button {
   font-size: 14px;
   font-weight: 600;
   color: white;
-  padding: 6px 25px 0px 20px;
+  padding: 0px 10px;
   margin: 10px 8px 20px 0px;
   display: inline-block;
-  float: right;
   text-decoration: none;
-  width: 50px; height: 27px;
+  width: 100px;
+  height: 27px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
   background-color: #3a57af;
-  -webkit-box-shadow: 0 3px rgba(58,87,175,.75);
-  -moz-box-shadow: 0 3px rgba(58,87,175,.75);
-  box-shadow: 0 3px rgba(58,87,175,.75);
+  -webkit-box-shadow: 0 3px rgba(58, 87, 175, .75);
+  -moz-box-shadow: 0 3px rgba(58, 87, 175, .75);
+  box-shadow: 0 3px rgba(58, 87, 175, .75);
   transition: all 0.1s linear 0s;
   top: 0px;
-  position: relative;
+  position: center;
 }
 
-a.button:hover {
+button {
   top: 3px;
   background-color:#2e458b;
   -webkit-box-shadow: none;
