--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <app-ejercicio></app-ejercicio>
 <app-login></app-login> -->
+
 <button routerLink="Login" >login</button>
-<!-- //<button routerLink="Registro" >Registro</button> -->
+<button routerLink="Registro" >Registro</button>
 <router-outlet></router-outlet>
