--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,20 +6,21 @@
           <div class="col-lg-12 login-key">
               <i class="fa fa-key" aria-hidden="true"></i>
           </div>
+
           <div class="col-lg-12 login-title">
               ADMIN PANEL
           </div>
 
           <div class="col-lg-12 login-form">
               <div class="col-lg-12 login-form">
-                  <form>
+                <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
                       <div class="form-group">
                           <label class="form-control-label">USERNAME</label>
-                          <input type="text" class="form-control">
+                          <input type="text" class="form-control" formControlName="email">
                       </div>
                       <div class="form-group">
                           <label class="form-control-label">PASSWORD</label>
-                          <input type="password" class="form-control" i>
+                          <input type="password" class="form-control" formControlName="password">
                       </div>
 
                       <div class="col-lg-12 loginbttm">
@@ -27,7 +28,6 @@
                               <!-- Error Message -->
                           </div>
                           <div class="col-lg-6 login-btm login-button">
-                            <button routerLink="Registro" >login</button>
                               <button type="submit" class="btn btn-outline-primary">LOGIN</button>
                           </div>
                       </div>
@@ -38,6 +38,22 @@
           <div class="col-lg-3 col-md-2"></div>
       </div>
   </div>
+
+  <!-- <h2>Login de usuario</h2>
+  <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+          <label class="form-label">Email</label>
+          <input type="text" class="form-control" formControlName="email">
+      </div>
+      <div class="mb-3">
+          <label class="form-label">Password</label>
+          <input type="password" class="form-control" formControlName="password">
+      </div>
+      <input type="submit" value="Enviar">
+  </form> -->
+  <!-- <button class="btn btn-info" (click)="onClick()">Login With Google</button> -->
+
+
 
 
 
