--- a/src/app/registrer/registrer.component.html
+++ b/src/app/registrer/registrer.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="mb-3">
         <label id="icon" for="password" class="form-label"><i class="icon-shield"></i></label>
-        <input type="password" class="form-control" formControlName="password">
+        <input type="password"  placeholder="password" required class="form-control" formControlName="password">
     </div>
     <button type="submit" class="button">Register</button>
   </form>
