--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
 
       <div class="col-lg-12 login-form">
         <div class="col-lg-12 login-form">
-          <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
+          <form (ngSubmit)="onSubmit()">
             <div class="form-group">
               <label class="form-control-label">USERNAME</label>
               <input type="text" class="form-control" formControlName="email" />
