--- a/src/app/registrer/registrer.component.html
+++ b/src/app/registrer/registrer.component.html
@@ -2,14 +2,14 @@
  <div class="testbox">
   <h1>Registration</h1>
 
-  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+  <form >
     <div class="mb-3">
       <label id="icon" for="email"><i class="icon-envelope "></i></label>
       <input type="text" name="email" id="email" placeholder="Email" required class="form-control" formControlName="email">
     </div>
     <div class="mb-3">
         <label id="icon" for="password" class="form-label"><i class="icon-shield"></i></label>
-        <input type="password"  placeholder="password" required class="form-control" formControlName="password">
+        <input type="password"  placeholder="password" requiredclass="form-control" formControlName="password">
     </div>
     <button type="submit" class="button">Register</button>
   </form>
