--- a/src/app/quien-soy/quien-soy.component.html
+++ b/src/app/quien-soy/quien-soy.component.html
@@ -9,9 +9,10 @@
     </div>
     <div class="col-lg-6 login-btm login-button">
       <button
-        type="submit"
+      type="button"
         class="btn btn-outline-primary"
         name="login"
+        (click)="onSubmit()"
       >LOGIN-REGISTRER
       </button>
   </div>
