--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -19,7 +19,15 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
+.rbAuto {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 30px;
+  letter-spacing: 2px;
+  margin-top: 15px;
+  font-weight: bold;
+  color: yellow;
+}
 .login-title {
   margin-top: 15px;
   text-align: center;
