--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <title>Hola!</title>
+  </head>
+  <body>
+    <section class="seccion-header">
+      <header>
+        <app-navbar></app-navbar>
+          <nav>
+            <ul>
+              <!--  li*4>a{$}  -->
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">Personajes</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </nav>
+      </header>
+    </section>
+
+  </body>
+</html>
+
