--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,10 @@
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
 body {
   background: #222D32;
   font-family: 'Roboto', sans-serif;
@@ -16,7 +23,7 @@ body {
   font-size: 80px;
   line-height: 100px;
   background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
-  -webkit-background-clip: text;
+  /* -webkit-background-clip: text; */
   -webkit-text-fill-color: transparent;
 }
 .rbAuto {
@@ -74,20 +81,6 @@ input[type=password] {
   outline: 0px;
 }
 
-.form-control:focus {
-  border-color: inherit;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border-bottom: 2px solid #0DB8DE;
-  outline: 0;
-  background-color: #1A2226;
-  color: #ECF0F5;
-}
-
-input:focus {
-  outline: none;
-  box-shadow: 0 0 0;
-}
 
 label {
   margin-bottom: 0px;
@@ -98,6 +91,10 @@ label {
   color: #6C6C6C;
   font-weight: bold;
   letter-spacing: 1px;
+}
+
+.login-btn button {
+  margin-right: 10px;
 }
 
 .btn-outline-primary {
