--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,69 +1,43 @@
+<body >
+<!--
+<app-home *ngIf="logOn" [email]="usr" (logOut)="onLogOut()"></app-home> -->
+<!-- <app-navbar></app-navbar> -->
 <div class="container">
-  <div class="row">
-    <div class="col-lg-3 col-md-2"></div>
-    <div class="col-lg-6 col-md-8 login-box">
+
+  <div class="row my-5" *ngIf="!logOn">
+
+    <div class="col-lg-6 col-md-8 login-box  mx-auto">
       <div class="col-lg-12 login-key">
         <i class="fa fa-key" aria-hidden="true"></i>
       </div>
 
-      <div class="col-lg-12 login-title">ADMIN PANEL</div>
+          <div class="col-lg-12 login-title">ADMIN PANEL</div>
 
-      <div class="col-lg-12 login-form">
-        <div class="col-lg-12 login-form">
-          <form >
+          <form  class="row" (ngSubmit)="onSubmit()">
 
-            <div class="form-group">
+            <div class="card-body p-3">
               <label class="form-control-label">USERNAME</label>
-              <input type="text"  class="form-control" name="username" formControlName="email"  />
+              <input type="text"  [(ngModel)]="usr.email" name="email" >
             </div>
-            <div class="form-group">
+            <div class="card-body p-3">
               <label class="form-control-label">PASSWORD</label>
-              <input
-                type="password"
-                class="form-control"
-                formControlName="password"
-                name="password"
-
-              />
+              <input type="password" [(ngModel)]="usr.pass" name="password"/>
             </div>
-            <div class="col-lg-12 loginbttm">
-              <div class="col-lg-6 login-btm login-text">
-                <!-- Error Message -->
-              </div>
-              <div class="col-lg-6 login-btm login-button">
-                <button
-                  type="button"
-                  class="btn btn-outline-primary"
-                  name="login"
-                  (click)="onSubmit()"
-                >
-                  LOGIN
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-outline-primary"
-                  name="registro"
-                  (click)="onSubmit()"
-                >
-                  Registro
-                </button>
-                <button
-                type="button"
-                class="btn btn-outline-primary"
-                name="Autocompletar"
-                (click)="onSubmit()"
-              >
-                Autocompletar
+
+            <div class="login-btn">
+              <button type="submit" class="btn btn-outline-primary" name="login">
+                LOGIN
               </button>
-
-              </div>
+              <button type="submit" class="btn btn-outline-primary" name="Autocompletar">
+                Autocompletar
+            </button>
             </div>
+            <label><a routerLink="/Registro">Registrarse</a></label>
           </form>
-        </div>
-      </div>
 
-      <div class="col-lg-3 col-md-2"></div>
     </div>
-  <!-- </div>
-  <app-home [email]="this.email"></app-home> -->
+  </div>
+
 </div>
+</body>
+
