--- a/src/app/registrer/registrer.component.html
+++ b/src/app/registrer/registrer.component.html
@@ -1,17 +1,15 @@
-
- <div class="testbox">
+<div class="testbox">
   <h1>Registration</h1>
 
-  <form >
+  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
     <div class="mb-3">
-      <label id="icon" for="email"><i class="icon-envelope "></i></label>
-      <input type="text" name="email" id="email" placeholder="Email" required class="form-control" formControlName="email">
+      <label id="icon" for="email"><i class="icon-envelope"></i></label>
+      <input type="text" id="email" placeholder="Email" required class="form-control" formControlName="email">
     </div>
     <div class="mb-3">
-        <label id="icon" for="password" class="form-label"><i class="icon-shield"></i></label>
-        <input type="password"  placeholder="password" requiredclass="form-control" formControlName="password">
+      <label id="icon" for="password"><i class="icon-shield"></i></label>
+      <input type="password" placeholder="Password" required class="form-control" formControlName="password">
     </div>
     <button type="submit" class="button">Register</button>
   </form>
-
 </div>
