--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
           <nav>
             <ul>
               <!--  li*4>a{$}  -->
-              <li><a href="#">HOME</a></li>
+              <li><a href="/Ejercicio">HOME</a></li>
               <li><a href="#">Personajes</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Blog</a></li>
