--- a/src/app/components/Juegos/memory-time/memory-time.component.html
+++ b/src/app/components/Juegos/memory-time/memory-time.component.html
@@ -1,6 +1,8 @@
 <div>
+  <app-chat></app-chat>
   <h1>Adivina el Número</h1>
   <p>{{ mensaje }}</p>
   <input type="number" [(ngModel)]="numeroIngresado" />
-  <button (click)="verificarNumero(numeroIngresado)">Verificar</button>
+  <button (click)="verificarNumero(numeroIngresado)">Verificar!!</button>
+
 </div>
