--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="card text-center cardContainer" *ngIf="userLogeado">
+<div class="card text-center cardContainer" *ngIf="userLogeado">
 
     <div class="card-header">Chatea!</div>
 
@@ -13,7 +13,7 @@
 
     <form class="card-footer text-muted input-group "(ngSubmit)="enviarMensaje()"> -->
       <!-- <div class="input-group mb-3"> -->
-        <!-- <input type="text" class="form-control" placeholder="Mensaje" [(ngModel)]="newMsj" [ngModelOptions]="{standalone: true}">
+        <input type="text" class="form-control" placeholder="Mensaje" [(ngModel)]="newMsj" [ngModelOptions]="{standalone: true}">
         <div class="input-group-append" id="basic-addon2" (click)="enviarMensaje()">
 
           <span class="input-group-text" id="basic-addon2">
@@ -23,7 +23,7 @@
         </div>
     </form>
 
-</div> -->
+</div> 
 
 
 
