--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,7 +5,7 @@
   align-items: center;
 }
 header {
-  /* background-image: url("../../assets/doctorStrange.jpeg"); */
+   background-image: url("../../../assets/doctorStrange.jpeg"); 
   display: flex;
   align-items: center;
   justify-content: space-between;
