--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,8 +17,12 @@
             </ul>
           </nav>
       </header>
+      <form  class="row" (ngSubmit)="onSubmit()">
+        <label><a routerLink="/Memoria">Juego Memoria!</a></label>
+    </form>
     </section>
-
+    <!-- <app-chat></app-chat> -->
+    <app-cartas></app-cartas>
   </body>
 </html>
 
