--- a/src/app/components/quien-soy/quien-soy.component.html
+++ b/src/app/components/quien-soy/quien-soy.component.html
@@ -5,7 +5,7 @@
       <img src="assets/foto.jpg" alt="" class="img-fluid">
     </div>
     <div class="col-md-8">
-      <p>Ivan Maximiliano Fabella. Soy aspirante a Programador. </p>
+      <p>Ivan Maximiliano Fabella. </p>
     </div>
     <div class="col-lg-6 login-btm login-button">
       <button
