--- a/src/app/components/chat/chat.component.css
+++ b/src/app/components/chat/chat.component.css
@@ -2,7 +2,7 @@
   width: 300px;
   height: 500px;
   position: fixed;
-  right: 0.5rem;
+  left: 0.5rem;
   bottom: 0.5rem;
   top: 50%;
   left: 50%;
@@ -19,7 +19,7 @@
   font-weight: 700;
 }
 .container-Msg {
-  max-height: 300px;
+  max-height: calc(100% - 50px);
   overflow-y: auto;
   padding: 0.3rem;
 }
@@ -56,4 +56,7 @@
   padding: 5px 10px;
   text-align: left;
 }
-
+.container-Msg{
+  overflow: scroll;
+  padding:0.3rem;
+}
