--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -11,7 +11,7 @@
 
     </div>
 
-    <form class="card-footer text-muted input-group "(ngSubmit)="enviarMensaje()"> -->
+    <form class="card-footer text-muted input-group "(ngSubmit)="enviarMensaje()">
       <!-- <div class="input-group mb-3"> -->
         <input type="text" class="form-control" placeholder="Mensaje" [(ngModel)]="newMsj" [ngModelOptions]="{standalone: true}">
         <div class="input-group-append" id="basic-addon2" (click)="enviarMensaje()">
@@ -23,7 +23,4 @@
         </div>
     </form>
 
-</div> 
-
-
-
+</div>
