--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,4 +12,6 @@
 
     <button class="btn btn-info btn-block m2" (click)="logOut()">logout</button>
   </div>
+
+  <!-- <app-home></app-home> -->
 </nav>
