--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
         <label><a routerLink="/Memoria">Juego Memoria!</a></label>
     </form>
     </section>
-    <!-- <app-chat></app-chat> -->
+    <app-chat></app-chat>
     <app-cartas></app-cartas>
   </body>
 </html>
