--- a/src/app/components/chat/chat.component.css
+++ b/src/app/components/chat/chat.component.css
@@ -2,13 +2,8 @@
   width: 300px;
   height: 500px;
   position: fixed;
-  left: 0.5rem;
+  right: 0.5rem;
   bottom: 0.5rem;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-
 }
 .card-body{
   padding: 0.5rem;
@@ -18,8 +13,8 @@
   color:black;
   font-weight: 700;
 }
-.container-Msg {
-  max-height: calc(100% - 50px);
+.containerMsg {
+  max-height: 350px;
   overflow-y: auto;
   padding: 0.3rem;
 }
@@ -34,29 +29,44 @@
   max-height: 100%;
 }
 
-.containerMsg{
-  overflow: scroll;
-  padding:0.3rm;
-}
 .send{
   display: block;
+  float: left;
   background-color : green;
   color: black;
   min-width: 50.0%;
-  border-radius: 30px;
-  padding: 5px 10px;
+  border-radius: 10px;
   text-align: left;
 }
 .recept{
-  display: block;
+  display: block; 
+  float: right;
   background-color : red;
   color: black;
-  min-width: 50.0%;
-  border-radius: 30px;
-  padding: 5px 10px;
+  min-width: 50.01%;
+  border-radius: 10px;
   text-align: left;
 }
-.container-Msg{
-  overflow: scroll;
-  padding:0.3rem;
+.chatIconContainer{
+  position: fixed;
+  right: 0.5rem;
+  bottom: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+
+}
+.iconoChat{
+  width: 40px;
+  height: 40px;
+}
+.closeChat{
+  position: absolute;
+  right: 0.5rem;
+  top: 0rem;
+  cursor: pointer;
+
 }
