--- a/src/app/components/Juegos/cartas/cartas.component.html
+++ b/src/app/components/Juegos/cartas/cartas.component.html
@@ -5,7 +5,8 @@
   <h2>¿La próxima carta será mayor o menor?</h2>
   <button class="btn btn-outline-primary" (click)="comparar('mayor')">Mayor</button>
   <button class="btn btn-outline-primary" (click)="comparar('menor')">Menor</button>
-
+  <button class="btn btn-outline-primary" (click)="comparar('igual')">Igual</button>
   <h2>Resultado:</h2>
   <p>{{ resultado }}</p>
 </div>
+ 
