--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -10,17 +10,17 @@
  
     <div class="card-body">
       <div id="containerMsg" class="containerMsg">
-        <p *ngFor="let chat of chats" class="send p-2" [ngClass]="userLogeado.uid==chat.emisor ? 'send' : 'recept' ">
-          {{chat.texto}}
-        </p>
+        <div *ngFor="let chat of chats" class="p-2 margin" [ngClass]="userLogeado.uid==chat.id ? 'send' : 'recept'">
+         <p class="hour">{{chat.hour}}</p>         
+         <p class="content">{{ chat.contenido }}</p>
+        </div>
       </div>
 
     </div>
 
-    <form class="card-footer text-muted input-group "(ngSubmit)="enviarMensaje()">
-      <!-- <div class="input-group mb-3"> -->
+    <form class="card-footer text-muted input-group "(ngSubmit)="sendMsg()">
         <input type="text" class="form-control" placeholder="Mensaje" [(ngModel)]="newMsj" [ngModelOptions]="{standalone: true}">
-        <div class="input-group-append" id="basic-addon2" (click)="enviarMensaje()">
+        <div class="input-group-append" id="basic-addon2" (click)="sendMsg()">
 
           <span class="input-group-text" id="basic-addon2">
             <img class="imgEnv small" src="../../../assets/send.png" width=52px alt="send message">
