--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,22 +7,10 @@
     <section class="seccion-header">
       <header>
         <app-navbar></app-navbar>
-          <nav>
-            <ul>
-              <!--  li*4>a{$}  -->
-              <li><a href="/Ejercicio">HOME</a></li>
-              <li><a href="#">Personajes</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </nav>
       </header>
-      <form  class="row" (ngSubmit)="onSubmit()">
-        <label><a routerLink="/Memoria">Juego Memoria!</a></label>
-    </form>
     </section>
-    <app-chat></app-chat>
-    <app-cartas></app-cartas>
+    <app-chat></app-chat>   
+    <app-juegos></app-juegos>
   </body>
 </html>
 
