--- a/src/app/components/chat/chat.component.css
+++ b/src/app/components/chat/chat.component.css
@@ -8,15 +8,18 @@
 .card-body{
   padding: 0.5rem;
 }
-.card-header{
-  background-color: green;
-  color:black;
-  font-weight: 700;
-}
 .containerMsg {
   max-height: 350px;
   overflow-y: auto;
   padding: 0.3rem;
+}
+.margin {
+  margin-bottom: 10px;  
+}
+.card-header{
+  background-color: green;
+  color:black;
+  font-weight: 700;
 }
 
 .imgEnv:active{
@@ -37,6 +40,8 @@
   min-width: 50.0%;
   border-radius: 10px;
   text-align: left;
+
+  width: 100%;
 }
 .recept{
   display: block; 
@@ -46,6 +51,7 @@
   min-width: 50.01%;
   border-radius: 10px;
   text-align: left;
+  width: 100%;
 }
 .chatIconContainer{
   position: fixed;
@@ -70,3 +76,12 @@
   cursor: pointer;
 
 }
+
+.hour {
+  font-weight: bold;  
+}
+
+.content {
+  margin-top: 5px;  
+}
+
