--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="../../assets/descarga.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    Bootstrap
-  </a>
-  <nav><ul><li>{{usuario}}</li></ul></nav>
-  <a class="navbar-brand" href="#">
-    <img src="../../assets/descarga.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    Bootstrap
-  </a>
-  <div>
+  <body>
+    <section class="seccion-header">
+      <header> 
+          <nav>
+            <ul>
+              <nav><ul><li>{{usuario}}</li></ul></nav>  
+              <div>
+                <button class="btn btn-info btn-block m2" (click)="logOut()">logout</button>
+              </div>
+            </ul>
+          </nav>
+      </header>
+    </section>
+  </body>
 
-    <button class="btn btn-info btn-block m2" (click)="logOut()">logout</button>
-  </div>
-
-  <!-- <app-home></app-home> -->
 </nav>
