--- a/src/app/components/Juegos/ahorcado/ahor.component.css
+++ b/src/app/components/Juegos/ahorcado/ahor.component.css
@@ -1,9 +1,9 @@
 body{
     margin:auto;
-    background-color: rgb(94, 26, 26); /*si la imagen no la carga el fondo es gris claro*/
-    background: url(../../../../assets/fondo.jpg) no-repeat center; /*inserta la imagen del fondo*/
-    background-size: cover;/*que la imagen cubra todo*/
-    min-height: 100vh; /*cubre el 100%*/
+    background-color: rgb(94, 26, 26); 
+    background: url(../../../../assets/fondo.jpg) no-repeat center; 
+    background-size: cover;
+    min-height: 100vh;
     font-family: 'Abril Fatface', cursive;
     font-family: 'Carter One', cursive;
     font-family: 'Original Surfer', cursive;
@@ -11,39 +11,39 @@ body{
   
   h1{
     margin: 0;
-    text-align: center;/**/
+    text-align: center; 
     color: black  ;
   }
   
   main{
-    width: 35%;/*modifica el tamaño del cuadrado donde esta el juego*/
+    width: 35%;
     margin: auto;
   
     padding: 50px;
-    background: rgba(255,255,255,.7);/*coloco una transparencia de 70% en main*/
-    display: flex; /*hace que lo que esta dentro del mail se agrupe uno al lado del otro*/
+    background: rgba(255,255,255,.7);
+    display: flex;
     gap: 50px;
   }
   
   #imagen{
-    width: 200px; /*tamaño de la imagen de ahorcado*/
+    width: 200px; 
   }
   #cuadro{
     text-align: center; 
     padding: 0px;
   }
-  /*visor y blancocuadro me sirva para ponerle fondo negro a la oración para que no se pierda en el fondo*/
+  
   #visor{  
     text-align: center;
   }
   
-  #status{ /*fondo para el mensaje de coincidencia o si ganaste o perdiste*/
+  #status{ 
     text-align: center;
     color: #FFFFFF;
     background-color: black;
   }
   #tablero{
-    font-size: 3em; /*tamaño de las letras a adivinar*/
+    font-size: 3em;
     margin-left: auto;
     margin-right: auto;
     
@@ -51,7 +51,7 @@ body{
   
   button{
     display: block;
-    margin-left: auto; /*margin-left junto margin-right centran el boton*/
+    margin-left: auto; 
     margin-right: auto;
-    margin-top: 20px; /*separa el boton del cuadro*/
+    margin-top: 20px; 
   }
