--- a/src/app/components/Juegos/ahorcado/ahorcado/ahorcado.component.html
+++ b/src/app/components/Juegos/ahorcado/ahorcado/ahorcado.component.html
@@ -1,22 +1,18 @@
 <div class="container">
-    <div style="text-align:center">
-        <h1>{{ title }}</h1><h1>{{ mascara }}</h1><h2>{{ mensaje }}</h2>
-
-        <img
-            width="300"
-            alt="image"
-            src={{vidaImagen}}
-        >
+    <div class="center-text">
+        <h1>{{ title }}</h1>
+        <h1>{{ mascara }}</h1>
+        <h2>{{ mensaje }}</h2>
+        <img class="image" width="300" alt="image" [src]="vidaImagen">
     </div>
 
-    <h2 style="text-align:center" >Ingrese una letra</h2>
+    <h2 class="center-text">Ingrese una letra</h2>
 
-    <div style="text-align:center" id="cuadro">            
-        <input id="letra" style="width: 13px; font-weight:bold" type="text"  maxlength="1" #letra/>
+    <div class="center-text" id="cuadro">            
+        <input id="letra" class="letter-input" type="text"  maxlength="1" #letra/>
         <br/><br/>
-        <input type="button" value="Probar suerte!!" (click)="probarSuerte(letra.value); letra.value='';"/>
+        <input type="button" class="btn" value="Probar suerte!!" (click)="probarSuerte(letra.value); letra.value='';"/>
         <br/><br/>
-        <input type="button" value="Reiniciar Juego" (click)="reiniciarJuego()"/>
+        <input type="button" class="btn" value="Reiniciar Juego" (click)="reiniciarJuego()"/>
     </div>
 </div>
- 
