--- a/src/app/components/Juegos/ahorcado/palabras/palabra.component.html
+++ b/src/app/components/Juegos/ahorcado/palabras/palabra.component.html
@@ -1,21 +1,15 @@
 <div class="container">
-    <div style="text-align:center">
-        <h1>{{ title }}</h1>
-
-        <img
-            width="500"
-            alt="image"
-            src="assets/fondo.png"
-        >
+    <div class="center-text">
+        <h1 class="title">{{ title }}</h1>
     </div>
 
-    <h2 style="text-align:center" >Ingrese una palabra</h2>
+    <h2 class="center-text">Ingrese una palabra</h2>
 
-    <div style="text-align:center" id="cuadro">            
+    <div class="center-text" id="cuadro">            
         <input id="palabra" type="text" maxlength="20" #palabraAdivinar/>
         <br/><br/>
         <input type="button" value="Jugar!!" class="btn btn-primary" (click)="IngresaPalabra(palabraAdivinar.value)"/>
         <br/><br/>
-        <a style="font-weight:bold">La palabras ya jugadas son: {{Servicio.arreglo}}</a>
+        <a class="played-words">Las palabras ya jugadas son: {{Servicio.arreglo}}</a>
     </div>
 </div>
