--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,11 +1,12 @@
-<div *ngIf="userLogeado && !viewChat" class="chatIconContainer"(click)="viewChat=true">
+<!-- <div *ngIf="userLogeado && !viewChat" class="chatIconContainer"(click)="viewChat=true"> -->
+<div *ngIf="userLogeado && !viewChat" class="chatIconContainer"(click)="closeOpenChat(true)"> 
   <img src="https://cdn-icons-png.flaticon.com/512/61/61516.png" class="iconoChat" alt="chat Icon">
 </div>
 
 <div class="card text-center cardContainer" *ngIf="userLogeado && viewChat">
 
     <div class="card-header">Chatea!
-      <div class="closeChat"(click)="viewChat=false">x</div>
+      <div class="closeChat"(click)="closeOpenChat(false)">x</div>
     </div>
  
     <div class="card-body">
