--- a/src/app/components/quien-soy/quien-soy.component.html
+++ b/src/app/components/quien-soy/quien-soy.component.html
@@ -1,13 +1,18 @@
 <div class="container">
-  <h2>Quien Soy</h2>
+  <h2  class="col-md-12">Quien Soy</h2>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
       <img src="assets/foto.jpg" alt="" class="img-fluid">
     </div>
-    <div class="col-md-8">
+    <div class="col-md-12">
       <p>Ivan Maximiliano Fabella. </p>
     </div>
-    <div class="col-lg-6 login-btm login-button">
+    <div  class="col-md-12">
+      Mi juego?
+      Adivinar el numero mayor! 
+
+    </div>
+    <div class="col-lg-12 login-btm login-button">
       <button
       type="button"
         class="btn btn-outline-primary"
